# ML-DL-Rewind

./: .gitignore  License.txt  README.md  test.ipynb  test.py
ai_project_lifecycle/: README.md
ai_project_lifecycle/1.voila/: ipywidget_examples.ipynb
ai_project_lifecycle/2.streamlit/: app.py  confirm_button_hack.py  predict.py
ai_project_lifecycle/2.streamlit/examples/: sample_code.py
ai_project_lifecycle/3.fastapi/: Makefile  README.md  examples.py  pyproject.toml  remove_poetry.py
ai_project_lifecycle/3.fastapi/app/: confirm_button_hack.py  main.py
ai_project_lifecycle/5.mlflow/: requirements.txt
ai_project_lifecycle/6.bentoml/app/: main.py
ai_project_lifecycle/7.airflow/: README.md  docker-readme.md  pyproject.toml
ai_project_lifecycle/7.airflow/dags/: 02-python-operator.py
machine_learning/: README.md  k_stock_1_web_crawling.ipynb  ml_basic.ipynb  pyproject.toml  skorch_based_pipline.ipynb  utils.ipynb
machine_learning/from_scratch/: README.md  pyproject.toml  pytest.ini  utils.py
machine_learning/from_scratch/models/: base_regression.py  decision_tree.py  knn.py  linear_regression.py  logic_regression.py  logistic_regression.py  naive_bayes.py  svm.py
machine_learning/from_scratch/tests/: test_decision_tree.py  test_knn.py  test_linear_regression.py  test_logic_regression.py  test_logistic_regression.py  test_naive_bayes.py  test_regression.py  test_svm.py
machine_learning/korea_stock_market/: k_stock_2_data_preparation.ipynb  k_stock_3_ml_prophet.ipynb  k_stock_4_ml_arima.ipynb  pyproject.toml
machine_learning/notebooks/: utils.ipynb
machine_learning/notebooks/checkpoint/: history.json  optimizer.pt  params.pt  train_end_criterion.pt  train_end_history.json  train_end_optimizer.pt  train_end_params.pt
mlops/: README.md
mlops/1.voila/: README.md  baseline.ipynb  config.yaml  requirements.txt
mlops/2.streamlit/: README.md  config.yaml  model.py  utils.py
mlops/2.streamlit/examples/: streamlit-basic.py
mlops/3.fastapi/: build_env_for_scipy.sh
mlops/3.fastapi/app/: confirm_button_hack.py  model.py
mlops/4.logging/: config.yaml  logger.py  pyproject.toml
mlops/5.mlflow/: README.md
mlops/6.bentoml/: README.md  pyproject.toml
mlops/6.bentoml/examples/: test.py
mlops/7.airflow/: .gitignore  docker-compose.yml
pytorch/: README.md  torch_basics.ipynb
pytorch/model_optimization_baseline/: README.md  inference.py  train.py
pytorch/notebooks_about_basics/: autograd_n_optimizer.ipynb  dataset_dataloader.ipynb  logistic_regression.ipynb  monitor_tools.ipynb  transfer_learning.ipynb
(+23 files in other folders)
