[tool.poetry]
name = "machine learning memo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9.0,<3.11"
scikit-learn = "^1.1.2"
prophet = "^1.1"
notebook = "^6.4.12"
html5lib = "^1.1"
requests = "^2.28.1"
seaborn = "^0.12.0"
ipywidgets = "^8.0.2"
plotly = "^5.10.0"
statsmodels = "^0.13.2"
tqdm = "^4.64.1"
scipy = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
