[tool.poetry]
name = "fast.api"
version = "0.1.0"
description = ""
authors = ["Jong Yoon Kim <jyoon95@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.0"
fastapi = "^0.79.0"
torch = "^1.12.0"
uvicorn = "^0.18.2"
albumentations = "^1.2.1"
torchvision = "^0.13.0"
efficientnet-pytorch = "^0.7.1"
python-multipart = "^0.0.5"
streamlit = "^1.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
