[tool.poetry]
name = "logging-ex"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = ">=3.7.13,<3.11"
google-cloud-bigquery = "^3.3.0"
PyYAML = "^6.0"
python-json-logger = "^2.0.4"
pytz = "^2022.1"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
