[tool.poetry]
name = "6.bentoml"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = ">=3.9.0,<3.20.0"
torch = "^1.12.0"
albumentations = "^1.2.1"
torchvision = "^0.13.0"
efficientnet-pytorch = "^0.7.1"
streamlit = "^1.11.1"
Pillow = "^9.2.0"
imageio = "^2.21.0"
bentoml = "^0.13.1"
watchdog = "^2.1.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
